// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OfficialFeedbackPost /> renders correctly for admin 1`] = `
<OfficialFeedbackPost__PostContainer
  className="e2e-official-feedback-post "
  key="feedbackId1"
>
  <OfficialFeedbackPost__StyledMoreActionsMenu
    actions={
      Array [
        Object {
          "handler": [Function],
          "label": <FormattedMessage
            defaultMessage="Edit"
            id="app.components.PostComponents.OfficialFeedback.editOfficialFeedbackPost"
          />,
          "name": "edit",
        },
        Object {
          "handler": [Function],
          "label": <FormattedMessage
            defaultMessage="Delete"
            id="app.components.PostComponents.OfficialFeedback.deleteOfficialFeedbackPost"
          />,
          "name": "delete",
        },
      ]
    }
    ariaLabel="Show more actions"
  />
  <QuillEditedContent>
    <OfficialFeedbackPost__Body
      className="e2e-official-feedback-post-body"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Update: Do Not Keep Calm, please panic now. End of transmission.",
          }
        }
      />
    </OfficialFeedbackPost__Body>
    <OfficialFeedbackPost__Footer>
      <OfficialFeedbackPost__Author
        className="e2e-official-feedback-post-author"
      >
        <T
          value={
            Object {
              "en": "Testing Official Department",
            }
          }
        />
      </OfficialFeedbackPost__Author>
      <OfficialFeedbackPost__DatePosted>
        <FormattedDate
          day="numeric"
          month="long"
          value="2012-01-01T04:06:07.000Z"
          year="numeric"
        />
      </OfficialFeedbackPost__DatePosted>
      <OfficialFeedbackPost__DateEdited>
        <FormattedMessage
          defaultMessage="Last edited on {date}"
          id="app.components.PostComponents.OfficialFeedback.lastEdition"
          values={
            Object {
              "date": <FormattedDate
                day="numeric"
                month="long"
                value="2012-01-01T04:06:07.000Z"
                year="numeric"
              />,
            }
          }
        />
      </OfficialFeedbackPost__DateEdited>
    </OfficialFeedbackPost__Footer>
  </QuillEditedContent>
</OfficialFeedbackPost__PostContainer>
`;

exports[`<OfficialFeedbackPost /> renders correctly for non-admin 1`] = `
<OfficialFeedbackPost__PostContainer
  className="e2e-official-feedback-post "
  key="feedbackId1"
>
  <QuillEditedContent>
    <OfficialFeedbackPost__Body
      className="e2e-official-feedback-post-body"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Update: Do Not Keep Calm, please panic now. End of transmission.",
          }
        }
      />
    </OfficialFeedbackPost__Body>
    <OfficialFeedbackPost__Footer>
      <OfficialFeedbackPost__Author
        className="e2e-official-feedback-post-author"
      >
        <T
          value={
            Object {
              "en": "Testing Official Department",
            }
          }
        />
      </OfficialFeedbackPost__Author>
      <OfficialFeedbackPost__DatePosted>
        <FormattedDate
          day="numeric"
          month="long"
          value="2012-01-01T04:06:07.000Z"
          year="numeric"
        />
      </OfficialFeedbackPost__DatePosted>
      <OfficialFeedbackPost__DateEdited>
        <FormattedMessage
          defaultMessage="Last edited on {date}"
          id="app.components.PostComponents.OfficialFeedback.lastEdition"
          values={
            Object {
              "date": <FormattedDate
                day="numeric"
                month="long"
                value="2012-01-01T04:06:07.000Z"
                year="numeric"
              />,
            }
          }
        />
      </OfficialFeedbackPost__DateEdited>
    </OfficialFeedbackPost__Footer>
  </QuillEditedContent>
</OfficialFeedbackPost__PostContainer>
`;
